sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var Swap : Boolean = true
  while (Swap == true) {
    Swap = false
    for(i <- 0 to getNombreValeurs()-2) {
      if (!plusPetit(i,i+1)) {
        Swap = true
        echange(i,i+1)
      }
    }
    for(i <- getNombreValeurs()-2 to 0 by -1) {
      if (!plusPetit(i,i+1)) {
        Swap = true
        echange(i,i+1)
  }
}